--- a/templates/sysconfig/custom-upload.html
+++ b/templates/sysconfig/custom-upload.html
@@ -4,6 +4,7 @@
 
 <form role="form" enctype="multipart/form-data" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step={{step}}">
 	<input type="hidden" name="token" value="{{token}}">
+	<input type="hidden" name="edit" value="{{edit}}">
 	<div class="input-group">
 		<span class="input-group-addon">{{lang_file}}</span>
 		<input class="form-control" type="file" name="modulefile">
