--- a/templates/translation/_page.html
+++ b/templates/translation/_page.html
@@ -9,6 +9,7 @@
 			<li><a href="?do=Translation&amp;page=messages">{{lang_editMessages}}</a></li>
 			<li><a href="?do=Translation&amp;page=hardcoded">{{lang_editHardcoded}}</a></li>
 			<li><a href="?do=Translation&amp;page=settings">{{lang_editSettings}}</a></li>
+			<li><a href="?do=Translation&amp;page=config-module">{{lang_editConfigModule}}</a></li>
 		</ul>
 	</div>
 </div>
