--- a/templates/sysconfig/_page.html
+++ b/templates/sysconfig/_page.html
@@ -37,7 +37,8 @@
 									{{/needrebuild}}
 									name="rebuild" value="{{configid}}" title="{{lang_rebuild}}"><span class="glyphicon glyphicon-refresh"></span></button>
 							</td>
-							<td>
+							<td class="slx-nowrap">
+								<a class="btn btn-success btn-xs" href="?do=SysConfig&amp;action=addconfig&amp;edit={{configid}}" title="{{lang_edit}}"><span class="glyphicon glyphicon-edit"></span></a>
 								<button class="btn btn-danger btn-xs" name="del" value="{{configid}}" title="{{lang_delete}}"><span class="glyphicon glyphicon-trash"></span></button>
 							</td>
 						</tr>
@@ -115,6 +116,14 @@
 <div class="panel panel-default">
 	<div class="panel-heading">{{lang_legend}}</div>
 	<div class="panel-body">
+		<p>
+			<span class="btn btn-default btn-xs" title="{{lang_show}}"><span class="glyphicon glyphicon-eye-open"></span></span>
+			{{lang_showLong}}
+		</p>
+		<p>
+			<span class="btn btn-default btn-xs" title="{{lang_download}}"><span class="glyphicon glyphicon-download-alt"></span></span>
+			{{lang_downloadLong}}
+		</p>
 		<p>
 			<span class="btn btn-default btn-xs" title="{{lang_rebuild}}"><span class="glyphicon glyphicon-refresh"></span></span>
 			{{lang_rebuildLong}}
