--- a/templates/page-minilinux.html
+++ b/templates/page-minilinux.html
@@ -1,15 +1,14 @@
 <div id="systemlist">
 	<div class="panel panel-default">{{lang_listObtained}}</div>
-	<script type="text/javascript">
-		var slx_check = setInterval(function() {
-			if (typeof $ === 'undefined') return;
-			clearInterval(slx_check);
-			$('#systemlist').load('{{{listurl}}}', function( response, status, xhr ) {
-				if ( status === "error" ) {
-					var msg = "{{lang_errorGetting}}";
-					$( "#systemlist" ).html( msg + xhr.status + " " + xhr.statusText );
-				}
-			})
-		}, 100);
-	</script>
 </div>
+
+<script type="text/javascript"><!--
+	function loadSystemList(version) {
+		$('#systemlist').load('{{{listurl}}}', { token: TOKEN, version: version }, function( response, status, xhr ) {
+			if ( status === "error" ) {
+				var msg = "{{lang_errorGetting}}";
+				$( "#systemlist" ).html( msg + xhr.status + " " + xhr.statusText );
+			}
+		});
+	}
+// --></script>
