Add SSL support to AD wizard

--- a/templates/sysconfig/ad-start.html
+++ b/templates/sysconfig/ad-start.html
@@ -54,6 +54,13 @@
 		</span>
 	</div>
 	<br>
+	<div class="checkbox">
+		<label>
+			<input type="checkbox" name="ssl" {{#ssl}}checked{{/ssl}}> {{lang_ssl}}
+		</label>
+	</div>
+	<div><i>{{lang_sslDescription}}</i></div>
+	<br>
 	<div class="pull-right">
 		<button type="submit" class="btn btn-primary">{{lang_next}} &raquo;</button>
 	</div>
