--- a/templates/sysconfig/ad-checkcredentials.html
+++ b/templates/sysconfig/ad-checkcredentials.html
@@ -35,6 +35,7 @@
 		{{#ssl}}
 		<input name="ssl" value="on" type="hidden">
 		{{/ssl}}
+		<input name="fingerprint" value="{{fingerprint}}" type="hidden">
 		<input name="originalbinddn" value="{{binddn}}" type="hidden">
 		<button id="nextbutton" type="submit" class="btn btn-primary" style="display:none">{{lang_skip}} &raquo;</button>
 	</form>
