--- a/templates/sysconfig/ad-checkcredentials.html
+++ b/templates/sysconfig/ad-checkcredentials.html
@@ -6,7 +6,8 @@
 	<div data-tm-id="{{self-search}}" data-tm-log="messages" data-tm-callback="selfCb">LDAP Self-Query</div>
 	<div data-tm-id="{{tm-search}}" data-tm-log="messages" data-tm-callback="ldapCb">LDAP Test-Query</div>
 </div>
-<br>
+<i>{{lang_onProblemSearchBase}}</i>
+<br><br>
 <div class="pull-left">
 	<form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step=AdAuth_Start">
 		<input type="hidden" name="token" value="{{token}}">
