--- a/style/default.css
+++ b/style/default.css
@@ -62,6 +62,11 @@ body {
 	text-align: left;
 }
 
+.slx-ga2 {
+	min-width: 12em;
+	text-align: left;
+}
+
 .slx-dialog {
 	width: 100%;
 	min-width: 600px;
