--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -36,6 +36,9 @@
 						<li><a href="?do=EventLog">{{lang_eventLog}}</a></li>
 					</ul>
 				</li>
+				<li>
+					<a href="?do=DozMod">{{lang_dozmod}}</a>
+				</li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="lang/{{current_lang}}/flag.png" alt="{{current_lang}}"><b class="caret"></b></a>
 					<ul class="dropdown-menu">
