Image delete feature

--- a/templates/dozmod/mailconfig.html
+++ b/templates/dozmod/mailconfig.html
@@ -5,6 +5,9 @@
 		{{lang_mailConfig}}
 	</div>
 	<div class="panel-body">
+		<p>{{lang_mailDescription}}</p>
+		<p>[BETA] Diese Funktionalität ist neu. Wir bitten um Nachsicht, falls es Situationen gibt, in denen zu viele
+			oder zu wenige Nachrichten verschickt werden.</p>
 		<form action="?do=DozMod" method="post" id="mailconf">
 			<div class="input-group">
 				<label class="input-group-addon slx-ga2" for="host-id">{{lang_host}} *</label>
