--- a/templates/dozmod/userlist.html
+++ b/templates/dozmod/userlist.html
@@ -5,6 +5,7 @@
 		{{lang_userListHeader}}
 	</div>
 	<div class="panel-body">
+		<p>{{lang_userListDescription}}</p>
 		<div class="table-responsive">
 			<table class="table table-stripped table-condensed">
 				<thead>
