[ldap/ad] Figure out proper spelling of search base

--- a/templates/sysconfig/ad-checkconnection.html
+++ b/templates/sysconfig/ad-checkconnection.html
@@ -9,6 +9,7 @@
 <div class="pull-left">
 	<form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step=AdAuth_Start">
 		<input type="hidden" name="token" value="{{token}}">
+		<input type="hidden" name="edit" value="{{edit}}">
 		<input name="title" value="{{title}}" type="hidden">
 		<input name="server" value="{{server}}" type="hidden">
 		<input name="searchbase" value="{{searchbase}}" type="hidden">
