--- a/templates/sysconfig/ad-checkcredentials.html
+++ b/templates/sysconfig/ad-checkcredentials.html
@@ -11,6 +11,7 @@
 <div class="pull-left">
 	<form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step=AdAuth_Start">
 		<input type="hidden" name="token" value="{{token}}">
+		<input type="hidden" name="edit" value="{{edit}}">
 		<input name="title" value="{{title}}" type="hidden">
 		<input name="server" value="{{server}}" type="hidden">
 		<input name="searchbase" value="{{searchbase}}" type="hidden">
@@ -30,6 +31,7 @@
 		<input name="title" value="{{title}}" type="hidden">
 		<input name="server" value="{{server}}" type="hidden">
 		<input name="searchbase" value="{{searchbase}}" type="hidden">
+		<input id="setbase" name="somedn" value="" type="hidden">
 		<input id="setdn" name="binddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
 		<input name="home" value="{{home}}" type="hidden">
@@ -47,6 +49,9 @@
 		if (!task || !task.statusCode)
 			return;
 		if (task.statusCode === 'TASK_FINISHED') {
+			if (task.data && task.data.dn) {
+				$('#setbase').val(task.data.dn);
+			}
 			$('#nextbutton').html('Weiter &raquo;').show();
 		}
 		if (task.statusCode === 'TASK_ERROR' || task.statusCode === 'PARENT_FAILED') {
