--- a/templates/sysconfig/ldap-checkcredentials.html
+++ b/templates/sysconfig/ldap-checkcredentials.html
@@ -3,7 +3,6 @@
 </p>
 
 <div id="zeug">
-	<div data-tm-id="{{self-search}}" data-tm-log="messages" data-tm-callback="selfCb">LDAP Self-Query</div>
 	<div data-tm-id="{{tm-search}}" data-tm-log="messages" data-tm-callback="ldapCb">LDAP Test-Query</div>
 </div>
 <i>{{lang_onProblemSearchBase}}</i>
@@ -11,6 +10,7 @@
 <div class="pull-left">
 	<form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step=LdapAuth_Start">
 		<input type="hidden" name="token" value="{{token}}">
+		<input type="hidden" name="edit" value="{{edit}}">
 		<input name="title" value="{{title}}" type="hidden">
 		<input name="server" value="{{server}}" type="hidden">
 		<input name="searchbase" value="{{searchbase}}" type="hidden">
@@ -30,6 +30,7 @@
 		<input name="title" value="{{title}}" type="hidden">
 		<input name="server" value="{{server}}" type="hidden">
 		<input name="searchbase" value="{{searchbase}}" type="hidden">
+		<input id="setbase" name="somedn" value="" type="hidden">
 		<input id="setdn" name="binddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
 		<input name="home" value="{{home}}" type="hidden">
@@ -47,6 +48,9 @@
 		if (!task || !task.statusCode)
 			return;
 		if (task.statusCode === 'TASK_FINISHED') {
+			if (task.data && task.data.dn) {
+				$('#setbase').val(task.data.dn);
+			}
 			$('#nextbutton').html('Weiter &raquo;').show();
 		}
 		if (task.statusCode === 'TASK_ERROR' || task.statusCode === 'PARENT_FAILED') {
@@ -54,16 +58,6 @@
 		}
 		if (task.statusCode === 'TASK_ERROR') {
 			$('#nextbutton').show();
-		}
-	}
-	function selfCb(task)
-	{
-		if (!task || !task.statusCode)
-			return;
-		if (task.statusCode === 'TASK_FINISHED' && task.data && task.data.dn) {
-			$('#setdn').val(task.data.dn);
-		} else {
-			$('#nextbutton').html('Trotzdem weiter &raquo;');
 		}
 	}
 </script>
