Improved several translations, added help texts, fixed module grouping, layout

--- a/templates/page-vmstore.html
+++ b/templates/page-vmstore.html
@@ -92,14 +92,14 @@
 					{{lang_nfsHelp1}}
 				</p>
 				<pre>
-/mnt/images    1.2.3.4(rw,no_root_squash,async,nolock)
+/mnt/images    1.2.3.4(rw,no_root_squash,async)
 /mnt/images    *(ro,async,nolock)
 				</pre>
 				<p>
 					{{lang_nfsHelp2}}
 				</p>
 				<pre>
-/mnt/images    1.2.3.4(rw,all_squash,anon_uid=1234,async,nolock)
+/mnt/images    1.2.3.4(rw,all_squash,anon_uid=1234,async)
 /mnt/images    *(ro,async,nolock)
 				</pre>
 			</div>
