--- a/templates/baseconfig/_page.html
+++ b/templates/baseconfig/_page.html
@@ -1,4 +1,5 @@
 <h1>{{lang_basicConfiguration}}</h1>
+<p>{{lang_clientRelatedConfig}}</p>
 <form action="?do=BaseConfig" method="post">
 	{{#categories}}
 	<div class="panel panel-default">
