--- a/templates/sysconfig/sshconfig-start.html
+++ b/templates/sysconfig/sshconfig-start.html
@@ -6,10 +6,11 @@
 		<input type="text" name="title" value="{{title}}" class="form-control" autofocus="autofocus">
 	</div>
 	<div class="form-group">
-		<label class="checkbox" for="allow-pw">{{lang_allowPass}}
+		<label>
 			<input type="checkbox" name="allowPasswordLogin" value="yes" {{#apl}}checked{{/apl}}>
+			{{lang_allowPass}}
 		</label>
-		<i>{{lang_allowPassInfo}}</i>
+		<p><i>{{lang_allowPassInfo}}</i></p>
 	</div>
 	<div class="form-group">
 		<label for="root-key">{{lang_rootKey}}</label>
