[diskstat] Fix i18n placeholder name; update translations

--- a/templates/systemstatus/diskstat.html
+++ b/templates/systemstatus/diskstat.html
@@ -6,7 +6,7 @@
 	<div>{{lang_free}}: {{free}}</div>
 	{{/system}}
 	{{^system}}
-	<b>{{lan_availableMemoryError}}</b>
+	<b>{{lang_systemStoreError}}</b>
 	{{/system}}
 </div>
 <div class="slx-storechart">
