--- a/style/default.css
+++ b/style/default.css
@@ -187,3 +187,29 @@ body {
 .slx-strike {
 	text-decoration: line-through;
 }
+
+/* File upload */
+
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  background: red;
+  cursor: inherit;
+  display: block;
+  cursor: pointer;
+}
+input[readonly] {
+  background-color: white !important;
+  cursor: text !important;
+}
