[serversetup] Fix ipxe html layout

--- a/templates/serversetup/ipxe.html
+++ b/templates/serversetup/ipxe.html
@@ -13,9 +13,9 @@
 
 			<div class="form-group">
 				<strong>{{lang_bootBehavior}}</strong>
-				<label class="radio"><input type="radio" name="defaultentry" value="net" {{active-net}}> bwLehrpool</label>
-				<label class="radio"><input type="radio" name="defaultentry" value="hdd" {{active-hdd}}> {{lang_localHDD}}</label>
-				<label class="radio"><input type="radio" name="defaultentry" value="custom" {{active-custom}}> {{lang_customEntry}} (&quot;custom&quot;)</label>
+				<div><label class="radio-inline"><input type="radio" name="defaultentry" value="net" {{active-net}}> bwLehrpool</label></div>
+				<div><label class="radio-inline"><input type="radio" name="defaultentry" value="hdd" {{active-hdd}}> {{lang_localHDD}}</label></div>
+				<div><label class="radio-inline"><input type="radio" name="defaultentry" value="custom" {{active-custom}}> {{lang_customEntry}} (&quot;custom&quot;)</label></div>
 			</div>
 
 			<div class="form-group">
