--- a/templates/sysconfig/ad-start.html
+++ b/templates/sysconfig/ad-start.html
@@ -10,6 +10,8 @@
 	{{lang_adText4}}
 </p>
 
+<i>{{lang_asteriskMandatory}}</i>
+
 <form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step={{step}}">
 	<input type="hidden" name="token" value="{{token}}">
 	<input type="hidden" name="edit" value="{{edit}}">
@@ -20,30 +22,18 @@
 	<div class="input-group">
 		<span class="input-group-addon slx-ga">Server *</span>
 		<input tabindex="2" name="server" value="{{server}}" type="text" class="form-control" placeholder="dc0.institution.example.com">
-		<!--span class="input-group-btn">
-			<a class="btn btn-default"><span class="glyphicon glyphicon-question-sign"></span></a>
-		</span-->
 	</div>
 	<div class="input-group">
 		<span class="input-group-addon slx-ga">{{lang_bindDN}} *</span>
 		<input tabindex="3" name="binddn" value="{{binddn}}" type="text" class="form-control" placeholder="domain\bwlp *ODER* CN=bwlp,OU=Benutzer,DC=domain,DC=hs-beispiel,DC=de">
-		<!--span class="input-group-btn">
-			<a class="btn btn-default"><span class="glyphicon glyphicon-question-sign"></span></a>
-		</span-->
 	</div>
 	<div class="input-group">
 		<span class="input-group-addon slx-ga">{{lang_password}} *</span>
 		<input tabindex="4" name="bindpw" value="{{bindpw}}" type="{{password_type}}" class="form-control" placeholder="{{lang_password}}">
-		<!--span class="input-group-btn">
-			<a class="btn btn-default"><span class="glyphicon glyphicon-question-sign"></span></a>
-		</span-->
 	</div>
 	<div class="input-group">
 		<span class="input-group-addon slx-ga">{{lang_searchBase}}</span>
 		<input tabindex="5" name="searchbase" value="{{searchbase}}" type="text" class="form-control" placeholder="dc=windows,dc=hs-beispiel,dc=de">
-		<!--span class="input-group-btn">
-			<a class="btn btn-default"><span class="glyphicon glyphicon-question-sign"></span></a>
-		</span-->
 	</div>
 	<br>
 	<div class="input-group">
@@ -54,15 +44,35 @@
 		</span>
 	</div>
 	<br>
-	<div class="checkbox">
+	<div>
 		<label>
-			<input type="checkbox" name="ssl" {{#ssl}}checked{{/ssl}}> {{lang_ssl}}
+			<input type="checkbox" name="ssl" onchange="$('#cert-box').css('display', this.checked ? '' : 'none')" {{#ssl}}checked{{/ssl}}> {{lang_ssl}}
 		</label>
 	</div>
-	<div><i>{{lang_sslDescription}}</i></div>
+	<i>{{lang_sslDescription}}</i>
 	<br>
 	<div class="pull-right">
 		<button type="submit" class="btn btn-primary">{{lang_next}} &raquo;</button>
+	</div>
+	<div class="clearfix"></div>
+	<hr>
+	<div {{^ssl}}style="display:none"{{/ssl}} id="cert-box">
+		<div class="well well-sm" id="wcustom">
+			{{lang_customCertificate}}
+			<pre class="small">
+-----BEGIN CERTIFICATE-----
+MIIFfTCCA...
+.....
+-----END CERTIFICATE-----
+-----BEGIN CERTIFICATE-----
+.....
+-----END CERTIFICATE-----</pre>
+			<textarea name="certificate" class="form-control small" cols="101" rows="10">{{certificate}}</textarea>
+		</div>
+		<div class="pull-right">
+			<button type="submit" class="btn btn-primary">{{lang_next}} &raquo;</button>
+		</div>
+		<div class="clearfix"></div>
 	</div>
 </form>
 
