--- a/templates/sysconfig/ad_ldap-checkcredentials.html
+++ b/templates/sysconfig/ad_ldap-checkcredentials.html
@@ -3,12 +3,13 @@
 </p>
 
 <div id="zeug">
+	{{#self-search}}<div data-tm-id="{{self-search}}" data-tm-log="messages" data-tm-callback="selfCb">LDAP Self-Query</div>{{/self-search}}
 	<div data-tm-id="{{tm-search}}" data-tm-log="messages" data-tm-callback="ldapCb">LDAP Test-Query</div>
 </div>
 <i>{{lang_onProblemSearchBase}}</i>
 <br><br>
 <div class="pull-left">
-	<form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step=LdapAuth_Start">
+	<form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step={{prev}}">
 		<input type="hidden" name="token" value="{{token}}">
 		<input type="hidden" name="edit" value="{{edit}}">
 		<input name="title" value="{{title}}" type="hidden">
@@ -19,12 +20,13 @@
 		<input name="home" value="{{home}}" type="hidden">
 		{{#ssl}}
 		<input name="ssl" value="on" type="hidden">
+		<input type="hidden" name="certificate" value="{{certificate}}">
 		{{/ssl}}
 		<button type="submit" class="btn btn-primary">&laquo; {{lang_back}}</button>
 	</form>
 </div>
 <div class="pull-right">
-	<form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step={{step}}">
+	<form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step={{next}}">
 		<input type="hidden" name="token" value="{{token}}">
 		<input type="hidden" name="edit" value="{{edit}}">
 		<input name="title" value="{{title}}" type="hidden">
@@ -36,6 +38,7 @@
 		<input name="home" value="{{home}}" type="hidden">
 		{{#ssl}}
 		<input name="ssl" value="on" type="hidden">
+		<input type="hidden" name="certificate" value="{{certificate}}">
 		{{/ssl}}
 		<input name="fingerprint" value="{{fingerprint}}" type="hidden">
 		<input name="originalbinddn" value="{{binddn}}" type="hidden">
@@ -58,6 +61,16 @@
 		}
 		if (task.statusCode === 'TASK_ERROR') {
 			$('#nextbutton').show();
+		}
+	}
+	function selfCb(task)
+	{
+		if (!task || !task.statusCode)
+			return;
+		if (task.statusCode === 'TASK_FINISHED' && task.data && task.data.dn) {
+			$('#setdn').val(task.data.dn);
+		} else {
+			$('#nextbutton').html('Trotzdem weiter &raquo;');
 		}
 	}
 </script>
