Implement statistics logging
DB scheme update is still missing, might still change a little...

--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -32,8 +32,10 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{lang_status}}<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><a href="?do=SystemStatus">{{lang_serverStatus}}</a></li>
-						<li><a href="?do=SysLog">{{lang_clientLog}}</a></li>
 						<li><a href="?do=EventLog">{{lang_eventLog}}</a></li>
+						<li class="divider"></li>
+						<li><a href="?do=SysLog">{{lang_clientLog}}</a></li>
+						<li><a href="?do=Statistics">{{lang_clientStats}}</a></li>
 					</ul>
 				</li>
 				<li>
